; ModuleID = '/home/carl/AnghaBench/php-src/ext/mysqlnd/extr_mysqlnd_plugin.c_mysqlnd_plugin_end_apply_func.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/mysqlnd/extr_mysqlnd_plugin.c_mysqlnd_plugin_end_apply_func.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.st_mysqlnd_plugin_header = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 (%struct.st_mysqlnd_plugin_header.0*)* }
%struct.st_mysqlnd_plugin_header.0 = type opaque

@ZEND_HASH_APPLY_REMOVE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mysqlnd_plugin_end_apply_func(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.st_mysqlnd_plugin_header*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i64 @Z_PTR_P(i32* %4)
  %6 = inttoptr i64 %5 to %struct.st_mysqlnd_plugin_header*
  store %struct.st_mysqlnd_plugin_header* %6, %struct.st_mysqlnd_plugin_header** %3, align 8
  %7 = load %struct.st_mysqlnd_plugin_header*, %struct.st_mysqlnd_plugin_header** %3, align 8
  %8 = getelementptr inbounds %struct.st_mysqlnd_plugin_header, %struct.st_mysqlnd_plugin_header* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32 (%struct.st_mysqlnd_plugin_header.0*)*, i32 (%struct.st_mysqlnd_plugin_header.0*)** %9, align 8
  %11 = icmp ne i32 (%struct.st_mysqlnd_plugin_header.0*)* %10, null
  br i1 %11, label %12, label %20

12:                                               ; preds = %1
  %13 = load %struct.st_mysqlnd_plugin_header*, %struct.st_mysqlnd_plugin_header** %3, align 8
  %14 = getelementptr inbounds %struct.st_mysqlnd_plugin_header, %struct.st_mysqlnd_plugin_header* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = load i32 (%struct.st_mysqlnd_plugin_header.0*)*, i32 (%struct.st_mysqlnd_plugin_header.0*)** %15, align 8
  %17 = load %struct.st_mysqlnd_plugin_header*, %struct.st_mysqlnd_plugin_header** %3, align 8
  %18 = bitcast %struct.st_mysqlnd_plugin_header* %17 to %struct.st_mysqlnd_plugin_header.0*
  %19 = call i32 %16(%struct.st_mysqlnd_plugin_header.0* %18)
  br label %20

20:                                               ; preds = %12, %1
  %21 = load i32, i32* @ZEND_HASH_APPLY_REMOVE, align 4
  ret i32 %21
}

declare dso_local i64 @Z_PTR_P(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
